--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.3.5",
     "expo": "~40.0.0",
-    "expo-constants": "^10.0.1",
+    "expo-constants": "~9.3.3",
     "expo-image-picker": "~9.2.0",
     "expo-location": "^10.0.0",
     "expo-permissions": "~10.0.0",
